BBDD some examples

--- a/Bloque I/exercise4/exercise4/src/main/resources/templates/tablon.html
+++ b/Bloque I/exercise4/exercise4/src/main/resources/templates/tablon.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tablón de anuncia</title>
+    <title>Tablón de anuncios</title>
 </head>
 <body>
     <h1>Tablón Anuncios</h1>
