Styles in AnuncioService

--- a/Bloque I/AnuncioService/src/main/resources/templates/anuncios_template.html
+++ b/Bloque I/AnuncioService/src/main/resources/templates/anuncios_template.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Anuncios</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
-<body>
+<body >
   {{#anuncios}}
-    <p>{{.}}</p>
+    <p class="style1">{{.}}</p>
   {{/anuncios}}
 </body>
 </html>
